--- a/_sass/minimal-mistakes/_portfolio.scss
+++ b/_sass/minimal-mistakes/_portfolio.scss
@@ -1,3 +1,8 @@
-figure.portfolio-img img {
-  border-radius: 50%;
+.portfolio {
+  figure.portfolio-img img {
+    border-radius: 50%;
+  }
+  .page__title {
+    margin-top: 5px;
+  }
 }
