--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -21,8 +21,10 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    <p>{{ page.bio.email }}<p>
+    
    
     {{ content }}
+    
+    <p style="text-align:center">E-Mail:{{ page.bio.email }}<p>
   </div>
 </div>
