--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -27,6 +27,6 @@ layout: default
     
     <p style="text-align:center">E-Mail:{{ page.bio.email }}<p>
     
-    {{ page | jsonify }}
+    {{ page | inspect }}
   </div>
 </div>
