--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -1,6 +1,8 @@
 {% assign author = page.author | default: page.authors[0] | default: site.author %}
 {% assign author = site.data.authors %}
 
+{{ author | inspect }}
+
 <div itemscope itemtype="https://schema.org/Person">
 
   {% if author.avatar %}
