--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -27,7 +27,7 @@ layout: default
     
     <p style="text-align:center">E-Mail:{{ page.bio.email }}<p>
     
-    {{ site
- | inspect }}
+    {{author | inspect }} 
+ 
   </div>
 </div>
