--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -26,6 +26,7 @@ layout: default
     {{ content }}
     
     <p style="text-align:center">E-Mail:{{ page.bio.email }}<p>
+    <p style="text-align:center">Location:{{ author.location}} <p>
     
     {{author | inspect }} 
  
