--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -28,7 +28,7 @@ layout: default
     <p style="text-align:center">E-Mail:{{ page.bio.email }}<p>
     <p style="text-align:center">Location:{{ author.location}} <p>
     
-    {{site.author{{ name }} | inspect }} 
+    {{ site.author.{{ name }} | inspect }} 
  
   </div>
 </div>
