--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -30,7 +30,7 @@ layout: default
     <p style="text-align:center">E-Mail:{{ page.bio.email }}<p>
     <p style="text-align:center">Location:{{ author.location}} <p>
     
-    {{ site.author | inspect }} 
+    {{ page.author | inspect }} 
  
   </div>
 </div>
