--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,11 @@
 layout: archive
 ---
 
+
+{% for author in site.authors %} 
+{{author.name}}
+{{author.url}}
+{% endfor %}
 {{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
