--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,7 @@
 layout: archive
 ---
 
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].authors | default: "Authors" }}</h3>
 
 <div itemscope itemtype="https://schema.org/Person">
  {% for author in site.authors %} 
