--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -6,6 +6,7 @@
 
 /* Variables */
 @import "minimal-mistakes/variables";
+@import "minimal-mistakes/_additions";
 
 /* Mixins and functions */
 @import "minimal-mistakes/vendor/breakpoint/breakpoint";
