--- a/_sass/minimal-mistakes/_additions.scss
+++ b/_sass/minimal-mistakes/_additions.scss
@@ -1,6 +1,5 @@
 .author__list__avatar {
-  display: table-cell;
-  vertical-align: top;
-  width: 36px;
-  height: 36px;
+  display: flex;
+  width: 50px;
+  height: 50px;
 }
