--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: archive
   {{ site.data.ui-text[site.locale].authors | default: "Authors" }}
 </h3>
 
-{% include authors-list.html %} {{ content }}
+{{ content }}
 
 <h3 class="archive__subtitle">
   {{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}
