--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,8 @@
 ---
-layout: archive
+layout: default
 ---
 
-<h3 class="archive__subtitle">
-  {{ site.data.ui-text[site.locale].authors | default: "Authors" }}
-</h3>
+
 
 {{ content }}
 
