--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<picture src="/assets/images/20190817_161124_0000.png">
+<picture srcset="/assets/images/20190817_161124_0000.png">
 
 
 {{ content }}
