--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,15 @@
 layout: default
 ---
 
-<picture srcset="/assets/images/20190817_161124_0000.png">
+
+  
+  <picture>
+
+  
+
+  <img src="/assets/images/20190817_161124_0000.png" alt="Logo" style="width:auto;">
+
+</picture>
 
 
 {{ content }}
