--- a/_sass/minimal-mistakes/_additions.scss
+++ b/_sass/minimal-mistakes/_additions.scss
@@ -5,6 +5,10 @@
 }
 .home-logo {
   img {
-  border-radius: 50%;
-   } 
-} 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    width: 40%;
+  }
+}
